Implemented create dto for TimeSlots
Also had to change day_of_week in "service_time_slots" table and id in "weekdays" table to text instead of int.
So did another scaffold.
