# fullstack/server/Application/Interfaces/ITimeSlotService.cs
@@ -1,0 +1,9 @@
+using Application.Models.Dtos.TimeSlot;
+
+namespace Application.Interfaces;
+
+public interface ITimeSlotService
+{
+    public TimeSlotResponseDto CreateTimeSlot(TimeSlotCreateRequestDto dto);
+    
+}
