# fullstack/server/Application/Models/Dtos/TimeSlot/TimeSlotCreateRequestDto.cs
@@ -1,0 +1,11 @@
+using System.ComponentModel.DataAnnotations;
+
+namespace Application.Models.Dtos.TimeSlot;
+
+public class TimeSlotCreateRequestDto
+{
+    [Required] public string ServiceId { get; set; } = null!;
+    [Required] public string WeekdayId { get; set; }
+    [Required] public TimeOnly StartTime { get; set; }
+    [Required] public TimeOnly EndTime { get; set; }
+}
