# fullstack/server/Application/Models/Dtos/TimeSlot/TimeSlotResponseDto.cs
@@ -1,0 +1,8 @@
+using System.ComponentModel.DataAnnotations;
+
+namespace Application.Models.Dtos.TimeSlot;
+
+public class TimeSlotResponseDto
+{
+    [Required] public string Message { get; set; } = null!;
+}
