# fullstack/server/Startup/openapi.json
@@ -153,6 +153,38 @@
         }
       }
     },
+    "/api/timeSlot/CreateTimeSlot": {
+      "post": {
+        "tags": [
+          "TimeSlot"
+        ],
+        "operationId": "TimeSlot_CreateTimeSlot",
+        "requestBody": {
+          "x-name": "dto",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/TimeSlotCreateRequestDto"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 1
+        },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AuthResponseDto"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/JoinLobby": {
       "post": {
         "tags": [
@@ -379,6 +411,36 @@
           "bookingDate": {
             "type": "string",
             "format": "date",
+            "minLength": 1
+          }
+        }
+      },
+      "TimeSlotCreateRequestDto": {
+        "type": "object",
+        "additionalProperties": false,
+        "required": [
+          "serviceId",
+          "weekdayId",
+          "startTime",
+          "endTime"
+        ],
+        "properties": {
+          "serviceId": {
+            "type": "string",
+            "minLength": 1
+          },
+          "weekdayId": {
+            "type": "string",
+            "minLength": 1
+          },
+          "startTime": {
+            "type": "string",
+            "format": "time",
+            "minLength": 1
+          },
+          "endTime": {
+            "type": "string",
+            "format": "time",
             "minLength": 1
           }
         }
